# speicher-spieler

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/202108210733_create_player_states/: down.sql  up.sql
src/: kv_store.rs  main.rs  player.rs  player_state.rs  speicher.rs  state.rs  storage.rs
templates/: index.html  index.html.tera
