[package]
name = "speicher-spieler"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
pickledb = "0.4.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]