[package]
name = "speicher-spieler"
version = "0.1.0"
edition = "2018"

[dependencies]
# web
actix-http = "2"
actix-web = "3"
# templating
tera = "1"
# storage
rusqlite = "0.25"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# other
chrono = "0.4"